read, update and remove operations on the movie
